--- a/index.html
+++ b/index.html
@@ -6,10 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js"></script>
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        
+        #map {
+            position: absolute;
+            top: 10%;
+            width: 50%;
+            height: 50%;
+        }
+    </style>
 </head>
 
 <body>
-
+    <input type="text" placeholder="Type in Artist Name">
+    <button id="button">Search</button>
+    <div id="map"></div>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
