--- a/index.html
+++ b/index.html
@@ -8,26 +8,17 @@
     <title>Document</title>
     <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js"></script>
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-        }
-        
-        #map {
-            position: absolute;
-            top: 10%;
-            width: 50%;
-            height: 50%;
-        }
-    </style>
+    <link href="styles/css/main_style.css" rel="stylesheet">
 </head>
 
 <body>
-    <input type="text" placeholder="Type in Artist Name">
-    <button id="button">Search</button>
-    <div id="map"></div>
-    <script src="script/script.js"></script>
+    <div id="wrapper">
+        <input type="text" placeholder="Type in Artist Name">
+        <button id="button">Search</button>
+        <div id="map"></div>
+        <div id="playlist"></div>
+        <script src="script/script.js"></script>
+    </div>
 </body>
 
 </html>
