when you click on the country, it will give the top 50 hit list of that country via the spotify API

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <button id="button">Search</button>
         <div id="map"></div>
         <div id="playlist"></div>
+        <script src="script/country_id.js"></script>
         <script src="script/script.js"></script>
     </div>
 </body>
