added the script link to the spotify player sdk

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <button id="button">Search</button>
         <div id="map"></div>
         <div id="playlist"></div>
+        <!--add the spotify player SDK-->
+        <script src="https://sdk.scdn.co/spotify-player.js"></script>
         <script src="script/country_id.js"></script>
         <script src="script/script.js"></script>
     </div>
