transfered script for webplay SDK from index html to the script.js

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
 <body>
     <div id="wrapper">
-        <input type="text" placeholder="Type in Artist Name">
-        <button id="button">Search</button>
+        <button id="buttonPlay">Play</button>
+        <button id="buttonStop">Stop</button>
         <div id="map"></div>
         <div id="playlist"></div>
-        <!--add the spotify player SDK-->
-        <script src="https://sdk.scdn.co/spotify-player.js"></script>
-        <script src="script/country_id.js"></script>
-        <script src="script/script.js"></script>
     </div>
+
+    <!--add the spotify player SDK-->
+    <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <script src="script/country_id.js"></script>
+    <script src="script/script.js"></script>
 </body>
 
 </html>
