changed the width of the map

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <button id="buttonPlay">Play</button>
         <button id="buttonStop">Stop</button>
         <div id="map"></div>
-        <div id="playlist"></div>
+        <div id="playlist-container">
+            <table id="playlist-table"></table>
+        </div>
     </div>
 
     <!--add the spotify player SDK-->
