changed the style (temp)

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
 
 <body>
     <div id="wrapper">
-        <button id="buttonPlay">Play</button>
-        <button id="buttonStop">Stop</button>
+        <!-- <button id="buttonPlay">Play</button>
+        <button id="buttonStop">Stop</button> -->
         <div id="map"></div>
         <div id="playlist-container">
-            <table id="playlist-table"></table>
+            <div id="left-container">
+                <div id="playlist-image"><img src="" alt=""></div>
+                <h2 id="playlist-title"></h2>
+                <p class="playlist-number"></p>
+            </div>
+            <div id="right-container">
+                <table id="playlist-table"></table>
+            </div>
         </div>
     </div>
 
