added class names to the td element with javascript

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td class="playstop-button"><img src="" alt=""><img src="" alt=""></td>
                         <td class="track-title">track title</td>
-                        <td class="track duration">3:15</td>
+                        <td class="track-duration">3:15</td>
                     </tr>
                     <tr>
                         <td></td>
