--- a/index.html
+++ b/index.html
@@ -23,18 +23,7 @@
                 <p class="playlist-number"></p>
             </div>
             <div id="right-container">
-                <table id="playlist-table">
-                    <tr>
-                        <td class="playstop-button"><img src="" alt=""><img src="" alt=""></td>
-                        <td class="track-title">track title</td>
-                        <td class="track-duration">3:15</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td class="artist-name">artist-name</td>
-                        <td></td>
-                    </tr>
-                </table>
+                <table id="playlist-table"></table>
             </div>
         </div>
     </div>
