added each track id to its play button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div id="playlist-image"><img src="" alt=""></div>
                 <h2 id="playlist-title"></h2>
                 <p class="playlist-number"></p>
+                <!-- <div class="playstop-button">fdfd</div> -->
             </div>
             <div id="right-container">
                 <table id="playlist-table"></table>
