commented vibrant.js script file

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <!--add the spotify player SDK-->
     <script src="https://sdk.scdn.co/spotify-player.js"></script>
+    <!-- <script src="/path/to/dist/vibrant.min.js"></script> -->
     <script src="script/country_id.js"></script>
     <script src="script/script.js"></script>
 </body>
