--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
         <button id="buttonStop">Stop</button> -->
         <div id="map"></div>
         <div id="playlist-container">
-            <div id="left-container">
-                <div id="playlist-image"><img src="" alt=""></div>
-                <h2 id="playlist-title"></h2>
-                <p class="playlist-number"></p>
+            <div id="top-container">
+                <div id="left-container">
+                    <div id="playlist-image"><img src="" alt=""></div>
+                </div>
+                <div id="right-container">
+                    <p>CHART</p>
+                    <h2 id="playlist-title">GLOBAL TOP 50</h2>
+                    <p class="playlist-number">Your daily update of the most played tracks right now</p>
+                    <button class="" id="mapAppearButton">map</button>
+                    <button class="" id="mapdisappearButton">delete</button>
+                </div>
             </div>
-            <div id="right-container">
+            <div id="bottom-container">
                 <table id="playlist-table"></table>
             </div>
         </div>
