added a button to make mapbox appear in right upper corner. created a close button that appears in buttom right corner of the map to close it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <div id="wrapper">
         <!-- <button id="buttonPlay">Play</button>
         <button id="buttonStop">Stop</button> -->
-        <div id="map"></div>
+        <div id="map">
+            <button class="" id="mapdisappearButton">Close</button>
+        </div>
         <div id="playlist-container">
             <div id="top-container">
                 <div id="left-container">
@@ -27,7 +29,7 @@
                     <h2 id="playlist-title">GLOBAL TOP 50</h2>
                     <p class="playlist-number">Your daily update of the most played tracks right now</p>
                     <button class="" id="mapAppearButton">map</button>
-                    <button class="" id="mapdisappearButton">delete</button>
+
                 </div>
             </div>
             <div id="bottom-container">
