--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                     <p>CHART</p>
                     <h2 id="playlist-title">GLOBAL TOP 50</h2>
                     <p class="playlist-number">Your daily update of the most played tracks right now</p>
-                    <button class="" id="mapAppearButton">map</button>
-
+                    <!-- <button class="" id="mapAppearButton">map</button> -->
+                    <div id="mapAppearButton">
+                        <img src="https://img.icons8.com/metro/26/ffffff/globe.png">
+                    </div>
                 </div>
             </div>
             <div id="bottom-container">
