--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <table id="playlist-table"></table>
             </div>
         </div>
+        <div id="footer"><small>&copy; 2019 Kasra Tabrizi</small></div>
     </div>
 
     <!--add the spotify player SDK-->
