added default global image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="playlist-container">
             <div id="top-container">
                 <div id="left-container">
-                    <div id="playlist-image"><img src="" alt=""></div>
+                    <div id="playlist-image"><img src="images/REGIONAL_GLOBAL_DEFAULT.jpg" alt=""></div>
                 </div>
                 <div id="right-container">
                     <p>CHART</p>
