added instruction text

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 </div>
             </div>
             <div id="bottom-container">
+                Select a country to view and listen to the top 50 playlist. Enjoy!
                 <table id="playlist-table"></table>
             </div>
         </div>
