play and stop button dont't wrap under each other anymore

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div id="bottom-container">
-                Select a country to view and listen to the top 50 playlist. Enjoy!
+                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. Enjoy!</p>
                 <table id="playlist-table"></table>
             </div>
         </div>
