commented the URLsearchpara; on refesh authorization

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <div id="mapAppearButton">
                         <img src="https://img.icons8.com/metro/26/ffffff/globe.png">
                     </div>
+                    <!-- <div>
+                        <button id="loginbutton">login</button>
+                    </div> -->
                 </div>
             </div>
             <div id="bottom-container">
