--- a/index.html
+++ b/index.html
@@ -28,17 +28,18 @@
                     <p>CHART</p>
                     <h2 id="playlist-title">GLOBAL TOP 50</h2>
                     <p class="playlist-number">Your daily update of the most played tracks right now</p>
-                    <!-- <button class="" id="mapAppearButton">map</button> -->
-                    <div id="mapAppearButton">
-                        <img src="https://img.icons8.com/metro/26/ffffff/globe.png">
+                    <div class="buttonbox">
+                        <div id="mapAppearButton">
+                            <img src="https://img.icons8.com/metro/26/ffffff/globe.png">
+                        </div>
+                        <div>
+                            <button id="loginbutton">login</button>
+                        </div>
                     </div>
-                    <!-- <div>
-                        <button id="loginbutton">login</button>
-                    </div> -->
                 </div>
             </div>
             <div id="bottom-container">
-                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. Enjoy!</p>
+                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. Enjoy! - Kasra Tabrizi</p>
                 <table id="playlist-table"></table>
             </div>
         </div>
