update README.md, minor change in html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div id="bottom-container">
-                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. Enjoy! - Kasra Tabrizi</p>
+                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. Enjoy!</p>
                 <table id="playlist-table"></table>
             </div>
         </div>
