added extra text to p of bottom container explaining more about the functionality of the webpage

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div id="bottom-container">
-                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. Enjoy!</p>
+                <p>Select a country, by pressing the globe icon, to view and listen to the top 50 playlist. You might want to login if the key is expired. Enjoy!</p>
                 <table id="playlist-table"></table>
             </div>
         </div>
